--- a/app/src/main/res/layout/activity_airy.xml
+++ b/app/src/main/res/layout/activity_airy.xml
@@ -3,82 +3,342 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_layout_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/midnight"
         tools:context=".ui.AiryActivity">
 
-        <Button
-            android:id="@+id/button_success"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/text_view_preview"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/sample_margin_large"
-            android:backgroundTint="@color/greeny"
-            android:text="@string/success"
-            app:layout_constraintBottom_toTopOf="@+id/button_error"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_marginTop="@dimen/margin_small"
+            android:layout_marginBottom="@dimen/margin_small"
+            android:text="Preview:"
+            android:textColor="@color/white"
+            android:textSize="@dimen/snackbar_big_text_size"
+            app:layout_constraintBottom_toTopOf="@+id/preview"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintVertical_bias="1" />
 
-        <Button
-            android:id="@+id/button_error"
+        <LinearLayout
+            android:id="@+id/preview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/sample_margin_large"
-            android:backgroundTint="@color/bloody"
-            android:text="@string/error"
-            app:layout_constraintBottom_toTopOf="@+id/button_warning"
+            android:layout_marginHorizontal="@dimen/margin_small"
+            android:background="@color/purple_200"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingHorizontal="@dimen/padding_small"
+            android:paddingVertical="@dimen/padding_small"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintBottom_toTopOf="@+id/space"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_success" />
+            app:layout_constraintStart_toStartOf="parent">
 
-        <Button
-            android:id="@+id/button_warning"
+            <ImageView
+                android:id="@+id/image_view_icon"
+                android:layout_width="@dimen/size_medium"
+                android:layout_height="@dimen/size_medium"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="@dimen/margin_small"
+                android:src="@drawable/ic_info"
+                app:tint="@color/white" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|start"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/text_view_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical|start"
+                    android:includeFontPadding="false"
+                    android:text="Airy Snackbar message"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/snackbar_default_text_size" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <Space
+            android:id="@+id/space"
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/scroll_view" />
+
+        <HorizontalScrollView
+            android:id="@+id/scroll_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/sample_margin_large"
-            android:backgroundTint="@color/carrot"
-            android:text="@string/warning"
-            app:layout_constraintBottom_toTopOf="@+id/button_info"
+            android:layout_marginTop="@dimen/sample_margin_medium"
+            android:layout_marginBottom="@dimen/sample_margin_medium"
+            app:layout_constraintBottom_toTopOf="@+id/constraint_layout_margin_padding"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_error" />
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chip_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:singleLine="true"
+                app:chipSpacingHorizontal="3dp"
+                app:singleSelection="true">
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip_success"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checkable="true"
+                    android:text="Success"
+                    android:textColor="@color/midnight"
+                    app:chipBackgroundColor="@color/white"
+                    app:chipIcon="@drawable/ic_success"
+                    app:chipIconTint="@color/greeny" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checkable="true"
+                    android:text="Info"
+                    android:textColor="@color/midnight"
+                    app:chipBackgroundColor="@color/white"
+                    app:chipIcon="@drawable/ic_info"
+                    app:chipIconTint="@color/ocean" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip_warning"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checkable="true"
+                    android:text="Warning"
+                    android:textColor="@color/midnight"
+                    app:chipBackgroundColor="@color/white"
+                    app:chipIcon="@drawable/ic_warning2"
+                    app:chipIconTint="@color/carrot" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip_error"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checkable="true"
+                    android:text="Error"
+                    android:textColor="@color/midnight"
+                    app:chipBackgroundColor="@color/white"
+                    app:chipIcon="@drawable/ic_error2"
+                    app:chipIconTint="@color/bloody" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip_custom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checkable="true"
+                    android:text="Custom"
+                    android:textColor="@color/carrot"
+                    app:chipBackgroundColor="@color/cloudy"
+                    app:chipIcon="@drawable/ic_custom"
+                    app:chipIconTint="@color/midnight" />
+
+            </com.google.android.material.chip.ChipGroup>
+        </HorizontalScrollView>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_layout_margin_padding"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_small"
+            android:layout_marginBottom="@dimen/sample_margin_medium"
+            android:background="@color/purple_500"
+            app:layout_constraintBottom_toTopOf="@+id/constraint_layout_text_and_radius">
+
+            <View
+                android:layout_width="4dp"
+                android:layout_height="0dp"
+                android:background="@color/purple_700"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/guideline2"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5" />
+
+            <TextView
+                android:id="@+id/text_view_margin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_small"
+                android:layout_marginTop="@dimen/margin_small"
+                android:text="Margin:"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toStartOf="@+id/guideline2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.slider.RangeSlider
+                android:id="@+id/range_slider_margin"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_small"
+                android:layout_marginEnd="@dimen/margin_small"
+                android:stepSize="2"
+                android:valueFrom="8"
+                android:valueTo="24"
+                app:labelBehavior="visible"
+                app:layout_constraintEnd_toStartOf="@+id/guideline2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_margin"
+                app:thumbColor="@color/white"
+                app:tickColorInactive="@color/cloudy"
+                app:trackColorActive="@color/cloudy"
+                app:trackColorInactive="@color/purple_700" />
+
+            <TextView
+                android:id="@+id/text_view_padding"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                android:text="Padding:"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.slider.RangeSlider
+                android:id="@+id/range_slider_padding"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_small"
+                android:stepSize="4"
+                android:value="8.0"
+                android:valueFrom="8.0"
+                android:valueTo="24"
+                app:labelBehavior="visible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_padding"
+                app:thumbColor="@color/white"
+                app:tickColorInactive="@color/cloudy"
+                app:trackColorActive="@color/cloudy"
+                app:trackColorInactive="@color/purple_700" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_layout_text_and_radius"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_small"
+            android:layout_marginBottom="@dimen/sample_margin_medium"
+            android:background="@color/purple_500"
+            app:layout_constraintBottom_toTopOf="@+id/button_show">
+
+            <View
+                android:layout_width="4dp"
+                android:layout_height="0dp"
+                android:background="@color/purple_700"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/guideline3"
+                app:layout_constraintStart_toStartOf="@+id/guideline3"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5" />
+
+            <TextView
+                android:id="@+id/text_view_radius"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_small"
+                android:layout_marginTop="@dimen/margin_small"
+                android:text="Radius:"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.slider.RangeSlider
+                android:id="@+id/range_slider_radius"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_small"
+                android:layout_marginEnd="@dimen/margin_small"
+                android:stepSize="0.1"
+                android:valueFrom="0.0"
+                android:valueTo="1.0"
+                app:labelBehavior="visible"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_radius"
+                app:thumbColor="@color/white"
+                app:tickColorInactive="@color/cloudy"
+                app:trackColorActive="@color/cloudy"
+                app:trackColorInactive="@color/purple_700" />
+
+            <TextView
+                android:id="@+id/text_view_text_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                android:text="Text Size:"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline3"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.slider.RangeSlider
+                android:id="@+id/range_slider_text_size"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_small"
+                android:stepSize="2"
+                android:valueFrom="10"
+                android:valueTo="20"
+                app:labelBehavior="visible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline3"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_text_size"
+                app:thumbColor="@color/white"
+                app:tickColorInactive="@color/cloudy"
+                app:trackColorActive="@color/cloudy"
+                app:trackColorInactive="@color/purple_700" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
-            android:id="@+id/button_info"
+            android:id="@+id/button_show"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/sample_margin_large"
-            android:backgroundTint="@color/ocean"
-            android:text="@string/info"
-            app:layout_constraintBottom_toTopOf="@+id/button_custom"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_warning" />
-
-        <Button
-            android:id="@+id/button_custom"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/sample_margin_large"
+            android:layout_marginTop="@dimen/sample_margin_medium"
+            android:layout_marginBottom="@dimen/sample_margin_medium"
             android:backgroundTint="@color/cloudy"
+            android:text="Show"
             android:textColor="@color/midnight"
-            android:text="@string/custom"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_info" />
+            app:layout_constraintVertical_bias="1"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:tickColorInactive="@color/purple_500" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
