--- a/app/src/main/res/layout/activity_airy.xml
+++ b/app/src/main/res/layout/activity_airy.xml
@@ -20,54 +20,65 @@
             android:text="Preview:"
             android:textColor="@color/white"
             android:textSize="@dimen/snackbar_big_text_size"
-            app:layout_constraintBottom_toTopOf="@+id/preview"
+            app:layout_constraintBottom_toTopOf="@+id/preview_container"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1" />
 
-        <LinearLayout
-            android:id="@+id/preview"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/preview_container"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_small"
-            android:background="@color/purple_200"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
             android:paddingHorizontal="@dimen/padding_small"
-            android:paddingVertical="@dimen/padding_small"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toTopOf="@+id/space"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <ImageView
-                android:id="@+id/image_view_icon"
-                android:layout_width="@dimen/size_medium"
-                android:layout_height="@dimen/size_medium"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="@dimen/margin_small"
-                android:src="@drawable/ic_info"
-                app:tint="@color/white" />
-
             <LinearLayout
-                android:layout_width="match_parent"
+                android:id="@+id/preview"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical|start"
-                android:orientation="horizontal">
+                android:background="@color/purple_200"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingHorizontal="@dimen/padding_small"
+                android:paddingVertical="@dimen/padding_small"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
-                <TextView
-                    android:id="@+id/text_view_message"
+                <ImageView
+                    android:id="@+id/image_view_icon"
+                    android:layout_width="@dimen/size_medium"
+                    android:layout_height="@dimen/size_medium"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="@dimen/margin_small"
+                    android:src="@drawable/ic_info"
+                    app:tint="@color/white" />
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical|start"
-                    android:includeFontPadding="false"
-                    android:text="Airy Snackbar message"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/snackbar_default_text_size" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/text_view_message"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical|start"
+                        android:includeFontPadding="false"
+                        android:text="Airy Snackbar message"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/snackbar_default_text_size" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Space
             android:id="@+id/space"
@@ -89,8 +100,8 @@
                 android:id="@+id/chip_group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:singleLine="true"
                 app:chipSpacingHorizontal="3dp"
+                app:singleLine="true"
                 app:singleSelection="true">
 
                 <com.google.android.material.chip.Chip
